// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`replicad add label names into Label() and Labels(): add label names into Label() and Labels() 1`] = `
"
let [vcc, vout, gnd] = Labels()
let vout2 = Label()

      ↓ ↓ ↓ ↓ ↓ ↓

const __replicad__warnings__ = [];
const __replicad__errors__ = [];
let [vcc, vout, gnd] = Labels([\\"vcc\\", \\"vout\\", \\"gnd\\"]);
let vout2 = Label(\\"vout2\\");
"
`;

exports[`replicad adds errors and warnings when used incorrectly: adds errors and warnings when used incorrectly 1`] = `
"
let mistake1 = Labels()

      ↓ ↓ ↓ ↓ ↓ ↓

const __replicad__warnings__ = [];
const __replicad__errors__ = [];

__replicad__errors__.append({
  \\"message\\": \\"'Labels' called without array pattern.\\",
  \\"loc\\": {
    \\"start\\": {
      \\"line\\": 1,
      \\"column\\": 0
    },
    \\"end\\": {
      \\"line\\": 1,
      \\"column\\": 23
    }
  }
});
"
`;

exports[`replicad bare Label and Labels cause errors: bare Label and Labels cause errors 1`] = `
"
Label()
Labels()

      ↓ ↓ ↓ ↓ ↓ ↓

const __replicad__warnings__ = [];
const __replicad__errors__ = [];
__replicad__errors__.append({
  \\"message\\": \\"'Label' called without being assigned to variable.\\",
  \\"loc\\": {
    \\"start\\": {
      \\"line\\": 1,
      \\"column\\": 0
    },
    \\"end\\": {
      \\"line\\": 1,
      \\"column\\": 7
    }
  }
});
__replicad__errors__.append({
  \\"message\\": \\"'Labels' called without being assigned to variables.\\",
  \\"loc\\": {
    \\"start\\": {
      \\"line\\": 2,
      \\"column\\": 0
    },
    \\"end\\": {
      \\"line\\": 2,
      \\"column\\": 8
    }
  }
});
"
`;
